Excle（.xls/.xlsx）导入导出 自定义线程池

--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,28 @@
             <artifactId>phprpc</artifactId>
             <version>3.0.2</version>
         </dependency>
+
+
+        <!--eg\xls Excel-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.14</version>
+        </dependency>
+        <!--xlsx-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.14</version>
+        </dependency>
+        <!--json-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.38</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
